[package]
name = "waystone"
version = "0.1.0"
edition = "2021"
default-run = "waystone"

[[bin]]
name = "waystone"
path = "src/bin/waystone.rs"

[[bin]]
name = "echo_server"
path = "src/bin/echo_server.rs"


[dependencies]
clap = { version = "4.5.20", features = ["derive"] }

serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.12"

tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
http-body-util = "0.1"
axum = "0.7"
axum-macros = "0.4"

reqwest = { version = "0.12", features = ["stream"] }
sync_wrapper = "1.0"

rand = "0.8"

[dev-dependencies]
tempfile = "3"
